# vlog

./: .gitignore  .travis.yml  :w  CMakeLists.txt  Dockerfile  INSTALL  KNOWN_ISSUES  README.md  TODO-incremental  createTridentLink  edb.conf.example  makefile  null.d
dup-build/: CMakeCache.txt  Makefile  cmake_install.cmake  libvlog-core.dylib  vlog
dup-build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  vlog
dup-build_debug/git-trident-prefix/tmp/: git-trident-cfgcmd.txt
example/: run
example/incremental/pq-2/: rules
examples/: .gitignore  edb.conf  run
examples/incremental/pq-2/: edb.conf
examples/queries/lubm/: lubm1.sparql  lubm10.sparql  lubm11.sparql  lubm12.sparql  lubm13.sparql  lubm14.sparql  lubm2.sparql  lubm3.sparql  lubm4.sparql  lubm5.sparql  lubm6.sparql  lubm7.sparql  lubm8.sparql  lubm9.sparql
examples/rules/aaai2016/: Claros_L.dlog  DBpedia_L.dlog  LUBM_L.dlog  LUBM_LE.dlog  LUBM_U.dlog
examples/rules/dlog/: LUBM1_U.dlog
examples/rules/owl/: rules  rules_sameAs
examples/rules/rdfs/: premat_queries
include/launcher/: vloglayer.h  vlogscan.h
include/parser/: ruledriver.h  rulescanner.h
include/vlog/: LogisticRegression.h  bindingstable.h  chasemgmt.h  column.h  concepts.h  consts.h  costestimator.h  edb.h  edbconf.h  edbiterator.h  edbtable.h  egdresultjoinproc.h  exporter.h  extresultjoinproc.h  fcinttable.h  fctable.h  filterer.h  filterhashjoin.h  finalresultjoinproc.h  graph.h  hi-res-timer.h  idxtupletable.h  joinprocessor.h  materialization.h  optimizer.h  qsqquery.h  qsqr.h  reasoner.h  resultjoinproc.h  ruleexecdetails.h  ruleexecplan.h  ruleexecutor.h  schema.h  segment.h  segment_support.h  seminaiver.h  seminaiver_threaded.h  seminaiver_trigger.h  sqltable.h  support.h  (+7 more)
include/vlog/cycles/: checker.h
include/vlog/embeddings/: embiterator.h  embtable.h  topkiterator.h  topktable.h
include/vlog/incremental/: edb-table-from-idb.h  edb-table-importer.h  incremental-concepts.h  removal.h
include/vlog/inmemory/: inmemorytable.h
include/vlog/mapi/: mapiiterator.h  mapitable.h
include/vlog/mdlite/: mdlitetable.h
include/vlog/ml/: LogisticRegression.h  helper.h  ml.h  training.h
include/vlog/mysql/: mysqliterator.h  mysqltable.h
include/vlog/odbc/: odbciterator.h  odbctable.h
include/vlog/sparql/: sparqliterator.h  sparqltable.h
include/vlog/text/: elastictable.h
include/vlog/trident/: tridentiterator.h  tridenttable.h  tridenttupleitr.h
include/vlog/trigger/: detector.h  tg.h  tgpath.h
java/: makefile  pom.xml
java/karmaresearch/vlog/: QueryIterator.java  VLog.java
java/src/main/java/vlog/: QueryIterator.java  Reasoner.java
makefile.platform.examples/: makefile.platform.Linux  makefile.platform.OSX
papers/aaai2016_support/: README.md
papers/aaai2016_support/rulesets/: Claros_LE.dlog  LUBM_L.dlog  LUBM_LE.dlog
rules/owl/: premat_queries
rules/rdfs/: rules
scripts/: amie-rules-to-dlog.py  compile.sh  generate-queries.py  generate_test.py  nt2csv.py  plot_trigger_graph.py  rdfox2vlog.py  rules_countjoins.py  run-java  run_experiment.py  update_and_make.sh
scripts/docker/: update_and_make.sh
scripts/docker/ext/: Dockerfile
scripts/docker/latest/: Dockerfile
scripts/ijcai2019/: reasoning-classifiers.ipynb
src/: main.cpp  reasoner.cpp
src/backward/: materialization.cpp  optimizer.cpp  qsqquery.cpp  qsqr.cpp  ruleexecutor.cpp
src/common/: bindingstable.cpp  concepts.cpp  edb.cpp  idxtupletable.cpp  tuplekbiterator.cpp
src/forward/: column.cpp  edbfcinternaltable.cpp  fcinttable.cpp  fctable.cpp  filterer.cpp  filterhashjoin.cpp  joinprocessor.cpp  resultjoinproc.cpp  segment.cpp  seminaiver.cpp
src/launcher/: main.cpp  vloglayer.cpp  vlogscan.cpp
src/magic/: wizard.cpp
src/parser/: ruledriver.cpp  rulelexer.l  rulemain.cpp  ruleparser.yy
src/vlog/: reasoner.cpp  utils.cpp
src/vlog/backward/: materialization.cpp  optimizer.cpp  qsqquery.cpp  qsqr.cpp  ruleexecutor.cpp
src/vlog/common/: bindingstable.cpp  concepts.cpp  edb.cpp  edbconf.cpp  exporter.cpp  graph.cpp  idxtupletable.cpp  sqltable.cpp
src/vlog/cycles/: checker.cpp
src/vlog/embeddings/: embtable.cpp  topktable.cpp
src/vlog/forward/: b1  b2  chasemgmt.cpp  column.cpp  edbfcinternaltable.cpp  egdresultjoinproc.cpp  extcolumns.cpp  extresultjoinproc.cpp  fcinttable.cpp  fctable.cpp  filterer.cpp  filterhashjoin.cpp  finresultjoinproc.cpp  joinprocessor.cpp  resultjoinproc.cpp  ruleexecdetails.cpp  ruleexecplan.cpp  segment.cpp  seminaiver.cpp  seminaiver_threaded.cpp  seminaiver_trigger.cpp  xxx
src/vlog/incremental/: edb-table-from-idb.cpp  edb-table-importer.cpp  incremental-concepts.cpp  removal.cpp
src/vlog/inmemory/: inmemorytable.cpp
src/vlog/java/karmaresearch/vlog/: AlreadyStartedException.java  Atom.java  EDBConfigurationException.java  Example.java  MaterializationException.java  NonExistingPredicateException.java  NotStartedException.java  QueryResultEnumeration.java  (+8 more)
src/vlog/java/native/: VLog.cpp
src/vlog/magic/: wizard.cpp
src/vlog/mapi/: mapiiterator.cpp  mapitable.cpp
src/vlog/mdlite/: mdlitetable.cpp
src/vlog/ml/: LogisticRegression.cpp  helper.cpp  ml.cpp  training.cpp
src/vlog/mysql/: mysqliterator.cpp  mysqltable.cpp
src/vlog/odbc/: odbciterator.cpp  odbctable.cpp
src/vlog/prediction/: training.cpp
src/vlog/sparql/: sparqliterator.cpp  sparqltable.cpp
src/vlog/text/: elastictable.cpp
src/vlog/trident/: tridentiterator.cpp  tridenttable.cpp  tridenttupleitr.cpp
src/vlog/trigger/: detector.cpp  mapping.cpp  tg.cpp  tgpath.cpp
src/vlog/util/: LogisticRegression.cpp  helper.cpp
src/vlog/web/: webinterface.cpp
webinterface/: functions.js  index.html  jquery-min.js  main.css  mat.html  newmat.html  sparql.html  tab-mat.html  tab-query.html
webinterface/d3/: radial.css  radial.js
webinterface/mat/: functions.js  infobox.html  main.css  scripts.js
win64/: vlog.sln
win64/vlog/: vlog.vcxproj  vlog.vcxproj.filters
win64/vlog-core/: vlog-core.vcxproj  vlog-core.vcxproj.filters
win64/vlog-java/: vlog-java.vcxproj  vlog-java.vcxproj.filters
(+13 files in other folders)
